...
        case .zip: "ZIP"
        case .sevenZip: "7Z"
        case .tar: "TAR"
        case .tarGz: "TAR.GZ"
        case .tarBz2: "TAR.BZ2"
        case .tarXz: "TAR.XZ"
        case .tarZst: "TAR.ZST"
        case .tarLz4: "TAR.LZ4"
        case .tarLz: "TAR.LZ"
        case .tarBr: "TAR.BR"
        case .zpaq: "ZPAQ"
        case .appleArchive: "Apple Archive"
        case .dmg: "Disk Image"
...
